manifests/ingress-controller.yaml
---
#apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: k8s-simple-ingress-controller
  labels:
    app: ingress-controller
spec:
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: k8s-simple-ingress-controller
      containers:
        - name: k8s-simple-ingress-controller
          image: registry.cn-shanghai.aliyuncs.com/barney-k8s/ingress-controller:v2.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
